--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,16 @@ springdoc:
   api-docs:
     path: /api-documentation
 spring:
+#  datasource:
+#    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:algo_space}
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    username: ${MYSQL_USERNAME:algo_space}
+#    password: ${MYSQL_PASSWORD:pass}
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:algo_space}
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: ${MYSQL_USERNAME:algo_space}
-    password: ${MYSQL_PASSWORD:pass}
+    url: jdbc:h2:mem:mydb
+    driver-class-name: org.h2.Driver
+    username: algo-space
+    password: 12345
   h2:
     console:
       enabled: true
