--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,19 +2,18 @@ springdoc:
   api-docs:
     path: /api-documentation
 spring:
-#  datasource:
-#    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:algo_space}
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    username: ${MYSQL_USERNAME:algo_space}
-#    password: ${MYSQL_PASSWORD:pass}
   datasource:
-    url: jdbc:h2:mem:mydb
-    driver-class-name: org.h2.Driver
-    username: algo-space
-    password: 12345
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:algo_space}
+    username: ${MYSQL_USERNAME:algo_space}
+    password: ${MYSQL_PASSWORD:pass}
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database: mysql
+    show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
+    properties:
+      hibernate:
+        hbm2ddl:
+          import_files: database/tasks.sql,database/hints.sql,database/tests.sql,database/tasks_available_languages.sql
