--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,6 @@ spring:
       hibernate:
         hbm2ddl:
           import_files: database/tasks.sql,database/hints.sql,database/tests.sql,database/tasks_available_languages.sql
+logging:
+  level:
+    root: info
