--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - MYSQL_USERNAME=root
       - MYSQL_PASSWORD=pass
       - MYSQL_DATABASE=algo_space
+      - FRONTEND_IP=algo-space-frontend:3000
     restart: always
     links:
       - mysqldb
