--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
           import_files: sql/tasks.sql,sql/hints.sql,sql/tests.sql,sql/tasks_available_languages.sql
 logging:
   level:
-    root: debug
+    root: info
+    zpi.algospace: debug
 allowed:
   origin: ${FRONTEND_IP:http://localhost:3000}
