--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,14 @@ services:
       # check docker host using ipconfig command in cmd
       # set docker host to DockerNAT IPv4Address and add port 2375
       DOCKER_HOST: tcp://172.17.0.1:2375
-      WORKER_IMAGE: algo-space-worker:1.0
-      KAFKA_SERVER: kafka:9092
       DOCKER_NETWORK: algo-space_algo-space-network
+      WORKER_IMAGE: algo-space-worker:1.0
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
     restart: always
     links:
       - mysqldb
+      - redis
     networks:
       - algo-space-network
 
@@ -51,32 +53,11 @@ services:
     networks:
       - algo-space-network
 
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.0.1
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    logging:
-      driver: none
-    networks:
-      - algo-space-network
-
-  kafka:
-    image: confluentinc/cp-kafka:7.0.1
-    container_name: kafka
+  redis:
+    image: redis:6.2
+    container_name: redis
     ports:
-      - '9092:9092'
-    depends_on:
-      - zookeeper
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_INTERNAL://kafka:29092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      - "6379:6379"
     networks:
       - algo-space-network
 
