--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 springdoc:
   api-docs:
     path: /api-documentation
+
 spring:
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:algo_space}
@@ -17,15 +18,17 @@ spring:
       hibernate:
         hbm2ddl:
           import_files: sql/tasks.sql,sql/hints.sql,sql/tests.sql,sql/tasks_available_languages.sql
-  kafka:
-    bootstrap-servers: ${KAFKA_SERVER:localhost:9092}
+  redis:
+    host: ${REDIS_HOST:redis}
+    port: ${REDIS_PORT:6379}
+
 logging:
   level:
     root: info
     zpi.algospace: debug
-    org.apache.kafka: warn
+
 docker:
-  host: ${DOCKER_HOST:host.docker.internal}}
-  network: ${DOCKER_NETWORK:algo_space}
+  host: ${DOCKER_HOST:tcp://172.17.0.1:2375}
+  network: ${DOCKER_NETWORK:bridge}
 worker:
   imageName: ${WORKER_IMAGE:algo-space-worker:1.0}
