--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-security</artifactId>
+            <version>1.6.10</version>
+        </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
