--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 springdoc:
   api-docs:
+    enabled: true
     path: /api-documentation
+  show-login-endpoint: true
 
 spring:
   datasource:
@@ -13,7 +15,7 @@ spring:
     database: mysql
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         hbm2ddl:
