docker-compose update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       # to run on Windows enable | Expose daemon on tcp://localhost:2375 without TLS | option in docker desktop
       # check docker host using ipconfig command in cmd
       # set docker host to DockerNAT IPv4Address and add port 2375
+      # Uncomment for Linux
+      # DOCKER_HOST: tcp://172.17.0.1:2375
+      # Uncomment for Windows
       DOCKER_HOST: tcp://host.docker.internal:2375
       DOCKER_NETWORK: algo-space_algo-space-network
       WORKER_IMAGE: algospacezpi/algospace-worker
