docker-compose update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - algo-space-network
 
   mysqldb:
-    image: mysql
+    image: mysql:8.0.30
     container_name: mysql-algo-space
     ports:
       - '3306:3306'
